# DOClarifAI

./: .gitignore  README.md  compose.production.yml  docker-compose.yml  package-lock.json  package.json  run_backend.sh  run_standalone.sh  run_tests_and_lint.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
authentication-service/: .gitignore  .pylintrc  Dockerfile  compose.base.yml  compose.prod.yml  compose.standalone.yml  requirements.txt  run_standalone.sh  run_tests_and_lint.sh
authentication_service/: .gitignore  Dockerfile  README.md  compose.base.yml  compose.standalone.yml
common/: README.md  pyproject.toml
common/src/common/: config.py  deps.py  mongo.py  postgres.py  security.py
common/src/common/crud/postgres/: document_types.py  files.py  schemas.py  templates.py  users.py  workflows.py
common/src/common/document_information_extraction_client/: constants.py  dox_api_client.py  endpoints.py  helpers.py
common/src/common/http_client/: helpers.py
common/src/common/models/: document_types.py  files.py  schemas.py  templates.py  users.py  workflows.py
common/src/common/mongo/: engine.py
common/src/common/postgres/: engine.py
common/src/common/postgres/crud/: users.py
common/src/common/postgres/models/: tokens.py
docs/: architecture.md  development.md  user_manual.md
exporter-service/: .gitignore  Dockerfile  README.md  compose.base.yml  compose.prod.yml  compose.standalone.yml  requirements.txt  run_standalone.sh  run_tests_and_lint.sh
frontend/: Dockerfile  README.md  compose.prod.yml  docker-compose.yml  index.html  (+5 more)
(+170 files in other folders)
